<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>

    </data>

<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:tag="layout/dailog_term_condition_0" android:background="@drawable/bg_white_corner_15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="270.0dip" android:backgroundTint="@color/colorPrimaryDark">
    <TextView
        android:textSize="14.0sp"
        android:textColor="@color/light_white"
        android:gravity="center"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.0dip"
        android:minWidth="200.0dip"
        android:text="@string/please_agree_our_term_amp_conditions_and_privacy_policy"
        android:paddingHorizontal="10.0dip" />

    <ImageView android:layout_width="90.0dip" android:layout_height="90.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/bubble_single"
        android:contentDescription="@string/image" />

    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingVertical="10.0dip">
        <TextView
            android:textColor="@color/colorTheme"
            android:gravity="end" android:id="@id/tv_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_of_use"
            android:paddingStart="0.0dip"
            android:paddingEnd="15.0dip" />

        <View android:layout_gravity="center"
            android:background="@color/color_text_light"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="5.0dip"
            android:layout_marginBottom="5.0dip"
            android:layout_marginVertical="5.0dip" />

        <TextView android:textColor="@color/colorTheme"
            android:gravity="start"
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:paddingStart="15.0dip" android:paddingEnd="0.0dip" />
        />

    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_white_bottom_15" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:weightSum="2.0" android:backgroundTint="@color/colorPrimary">
        <TextView android:textColor="@color/color_text_light"
            android:gravity="center"
            android:id="@+id/tv_cancel"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:layout_weight="1.0" />
        <TextView
            android:textColor="@color/colorTheme"
            android:gravity="center"
            android:id="@+id/tv_positive"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/agree"
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
</layout>